[package]
name = "rust-roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.7.0", features = ["dynamic"] }
bevy = "0.7"
kayak_ui = { git="https://github.com/StarArawn/kayak_ui", features = ["bevy_renderer"] }
bracket-lib = "0.8.1"
